--- a/Final Exam/todo/index.html
+++ b/Final Exam/todo/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Problem 2 Solution Starter</title>
   <script>
-    var names = []; // DO NOT REMOVE
+    var names = []; 
   </script>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
@@ -12,6 +12,6 @@
 </head>
 <body>
   <h1>Problem 2 Solution Starter</h1>
-  <!-- Output is shown in browser console -->
+ 
 </body>
 </html>
